--- a/Core/Source/default.css
+++ b/Core/Source/default.css
@@ -42,8 +42,8 @@ article,aside,footer,header,hgroup,nav,section
 p
 {
 	display:block;
-	-webkit-margin-before:1em;
-	-webkit-margin-after:1em;
+	-webkit-margin-before:0;
+	-webkit-margin-after:0;
 	-webkit-margin-start:0;
 	-webkit-margin-end:0;
 }
